--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
 #创建 .gitignore 文件，忽略不需要版本控制的文件
-backend/vendor/
-frontend/node_modules/
-# 忽略环境配置文件（通常包含敏感信息）
-backend/.env
+
 # 可选的本地覆盖配置
 docker/docker-compose.override.yml
 mysql-data/
 redis-data/
+
+# 忽略环境配置文件（通常包含敏感信息）
+backend/.env
+backend/vendor/
+
+# 忽略操作系统自动生成的文件
+.DS_Store
+Thumbs.db
+
+# 忽略IDE或编辑器生成的配置文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 忽略依赖安装目录（对于Node.js项目）
+frontend/node_modules/
+
+# 忽略日志文件
+*.log
+
+# 忽略编译产物（对于C++, Java等项目）
+*.class
+*.o
+*.so
